--- a/payment/src/test/resources/config/application.yml
+++ b/payment/src/test/resources/config/application.yml
@@ -5,6 +5,7 @@ graphql:
 nl-portal:
     payment:
         url: https://secure.ogone.com/ncol/test/orderstandard.asp
+        taak-type-url: "http://host.docker.internal:8011/api/v1/objecttypes/3e852115-277a-4570-873a-9a64be3aeb34"
         configurations:
             belastingzaken:
                 pspId: TAX
