--- a/app/src/main/resources/config/application.yml
+++ b/app/src/main/resources/config/application.yml
@@ -103,6 +103,8 @@ nl-portal:
                     url: http://localhost:8002/documenten/api/v1
                     clientId: docdoc
                     secret: e09b8bc5-5831-4618-ab28-41411304309d
+        startform:
+            type-base-url: http://host.docker.internal:8011/api/v1
     openklant:
         url: http://localhost:8006
         clientId: valtimo_client
