extra filter for getZaken to return only closed or open zaken

--- a/zgw/zaken-api/src/test/resources/config/application.yml
+++ b/zgw/zaken-api/src/test/resources/config/application.yml
@@ -4,7 +4,7 @@ graphql:
 
 logging:
     level:
-        reactor.netty.http.client.HttpClient: DEBUG
+        reactor.netty.http.client.HttpClient: TRACE
 
 nl-portal:
     zgw:
