fixed a 400 error on the getProductZaken query

--- a/app/src/main/resources/config/application.yml
+++ b/app/src/main/resources/config/application.yml
@@ -70,6 +70,10 @@ graphql:
 logging:
     level:
         org.springframework.amqp: DEBUG
+        .reactor:
+            netty:
+                http:
+                    client: TRACE
 
 nl-portal:
     zgw:
