added dmn functionality to PDC

--- a/product/src/test/resources/config/application.yml
+++ b/product/src/test/resources/config/application.yml
@@ -2,6 +2,12 @@ graphql:
     packages:
         - "nl.nlportal"
 
+logging:
+    level:
+        reactor:
+            netty:
+                http:
+                    client: DEBUG
 nl-portal:
     zgw:
         catalogiapi:
