feat: add whitelist to application properties to be able to filter by DocumentStatus

--- a/app/src/main/resources/config/application.yml
+++ b/app/src/main/resources/config/application.yml
@@ -93,6 +93,11 @@ nl-portal:
                     - confidentieel
                     - geheim
                     - zeer_geheim
+                status-whitelist:
+                    - ter_vaststelling
+                    - in_bewerking
+                    - definitief
+                    - gearchiveerd
         taak:
             taakobject:
                 typeUrl: "http://host.docker.internal:8011/api/v1/objecttypes/3e852115-277a-4570-873a-9a64be3aeb34"
