feat: 104357 filter zaak informatieobjecten (#255)
* feat: 104357 filter zaak informatieobjecten

This PR introduces the ability to filter which Zaak Informatieobjecten are shown to the user.

Allowed confidentality levels can be set via configuration properties at path `nl-portal.zgw.zaak-documenten.vertrouwelijkheidsaanduiding`. When not set, will use default confidentiality levels:
- openbaar
- beperkt_openbaar
- intern
- vertrouwelijk

* feat: nest confidentiality filter properties under zakenapi config

* fixed ktlint errors

* feat: 104357 filter zaak informatieobjecten

This PR introduces the ability to filter which Zaak Informatieobjecten are shown to the user.

Allowed confidentality levels can be set via configuration properties at path `nl-portal.zgw.zaak-documenten.vertrouwelijkheidsaanduiding`. When not set, will use default confidentiality levels:
- openbaar
- beperkt_openbaar
- intern
- vertrouwelijk

* feat: nest confidentiality filter properties under zakenapi config

* fixed ktlint errors

* revert: spring.factories refactor - breaks ZaakQueryIT

* feat: add whitelist to application properties to be able to filter by DocumentStatus

--- a/app/src/main/resources/config/application.yml
+++ b/app/src/main/resources/config/application.yml
@@ -83,6 +83,21 @@ nl-portal:
             url: http://localhost:8001
             clientId: valtimo_client
             secret: e09b8bc5-5831-4618-ab28-41411304309d
+            zaak-documenten:
+                vertrouwelijkheidsaanduiding-whitelist:
+                    - openbaar
+                    - beperkt_openbaar
+                    - intern
+                    - vertrouwelijk
+                    - zaakvertrouwelijk
+                    - confidentieel
+                    - geheim
+                    - zeer_geheim
+                status-whitelist:
+                    - ter_vaststelling
+                    - in_bewerking
+                    - definitief
+                    - gearchiveerd
         taak:
             taakobject:
                 typeUrl: "http://host.docker.internal:8011/api/v1/objecttypes/3e852115-277a-4570-873a-9a64be3aeb34"
@@ -155,4 +170,3 @@ nl-portal:
                     shaOutKey: de14f0e3-2ff0-45eb-95a6-1cdc35ca7a00
                     failureUrl: http://localhost:3000
                     successUrl: http://localhost:3000
-
