fix the date format on TaakObjectV2

--- a/app/src/main/resources/config/application.yml
+++ b/app/src/main/resources/config/application.yml
@@ -18,6 +18,10 @@ spring:
         default: dev
     application:
         name: nl-portal-backend-libraries
+    jackson:
+        serialization:
+            write-dates-as-timestamps: false
+        date-format: yyyy-MM-dd'T'HH:mm:ss.SSSZ
     security:
         oauth2:
             resourceserver:
