feat: add integration tests

--- a/zgw/zaken-api/src/test/resources/config/application.yml
+++ b/zgw/zaken-api/src/test/resources/config/application.yml
@@ -9,20 +9,24 @@ logging:
 nl-portal:
     zgw:
         catalogiapi:
-            url: #filled in test
+            url: http://localhost:8001
             clientId: valtimo_client
             secret: e09b8bc5-5831-4618-ab28-41411304309d
         documentenapis:
             default-document-api: openzaak
             configurations:
                 openzaak:
-                    url: #filled in test
+                    url: http://localhost:8001
                     clientId: valtimo_client
                     secret: e09b8bc5-5831-4618-ab28-41411304309d
                     rsin: "051845623"
                     documentTypeUrl: http://localhost:8001/catalogi/api/v1/informatieobjecttypen/00000000-0000-0000-000000000000
+                example:
+                    url: https://example.org/documenten/api/v1
+                    clientId: valtimo_client
+                    secret: e09b8bc5-5831-4618-ab28-111111111111
         zakenapi:
-            url: #filled in test
+            url: http://localhost:8001
             clientId: valtimo_client
             secret: e09b8bc5-5831-4618-ab28-41411304309d
     objectsapi:
