--- a/zgw/berichten/licenseHeaderFile.template
+++ b/zgw/berichten/licenseHeaderFile.template
@@ -1,5 +1,5 @@
 /*
- * Copyright $YEAR Ritense BV, the Netherlands.
+ * Copyright (c) $YEAR Ritense BV, the Netherlands.
  *
  * Licensed under EUPL, Version 1.2 (the "License");
  * you may not use this file except in compliance with the License.
