--- a/zgw/berichten/src/test/resources/config/application.yml
+++ b/zgw/berichten/src/test/resources/config/application.yml
@@ -7,6 +7,9 @@ nl-portal:
         url: #filled in test
         clientId: valtimo_client
         secret: e09b8bc5-5831-4618-ab28-41411304309d
+    zgw:
+        berichten:
+            bericht-object-type-url: "https://example.com/api/v1/objecttypes/78731088-430f-49fd-9a4c-80ddd42ded28"
 
 spring:
     security:
