test upload license

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,6 +23,19 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
+            -   name: Gradle CheckLicense
+                run: ./gradlew checkLicense
+
+            -   uses: shallwefootball/s3-upload-action@master
+                name: Upload S3
+                id: S3
+                with:
+                    aws_key_id: ${{ secrets.AWS_KEY_ID }}
+                    aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
+                    aws_bucket: ${{ secrets.AWS_LICENSE_BUCKET }}
+                    source_dir: 'build/reports/dependency-license'
+                    destination_dir: 'licenses/'
+
             - uses: actions/checkout@v4
             - name: Set up JDK 21
               uses: actions/setup-java@v4
@@ -35,15 +48,3 @@ jobs:
                   gradle-version: 8.5
                   arguments: build
 
-            - name: Gradle CheckLicense
-              run: ./gradlew checkLicense
-
-            - uses: shallwefootball/s3-upload-action@master
-              name: Upload S3
-              id: S3
-              with:
-                aws_key_id: ${{ secrets.AWS_KEY_ID }}
-                aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
-                aws_bucket: ${{ secrets.AWS_LICENSE_BUCKET }}
-                source_dir: 'build/reports/dependency-license/index.html'
-                destination_dir: 'licenses/'
