--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,7 +40,7 @@ jobs:
 
             -   name: Upload to S3
                 run: |
-                    aws s3 cp ./build/reports/dependency-license/* s3://nl-portal-licenses/licenses/
+                    aws s3 cp ./build/reports/dependency-license s3://nl-portal-licenses/licenses/
                 env:
                     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY_ID }}
                     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
