--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,7 +40,9 @@ jobs:
 
             -   name: Upload to S3
                 run: |
-                    aws s3 cp ./build/reports/dependency-license --include index.html s3://nl-portal-licenses/licenses/
+                    mkdir ./build/reports/${{ github.ref_name }}
+                    cp ./build/reports/dependency-license/index.html ./build/reports/${{ github.ref_name }}/licence-report.html
+                    aws s3 cp ./build/reports/${{ github.ref_name }} s3://nl-portal-licenses/licenses/ --recursive
                 env:
                     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY_ID }}
                     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
