--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,15 +35,31 @@ jobs:
                   gradle-version: 8.5
                   arguments: build
 
-            -   name: Gradle CheckLicense
-                run: ./gradlew checkLicense
+            - name: set env
+              run: echo "VERSION=$(grep "version" gradle.properties | sed 's/^.*=//')" >> $GITHUB_ENV
 
-            -   name: Upload to S3
-                run: |
-                    mkdir ./build/reports/test-release
-                    cp ./build/reports/dependency-license/index.html ./build/reports/test-release/licence-report.html
-                    aws s3 cp ./build/reports/test-release s3://nl-portal-licenses/licenses/ --recursive
-                env:
-                    AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY_ID }}
-                    AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                    AWS_DEFAULT_REGION: 'eu-central-1'
+            - name: Gradle CheckLicense
+              run: ./gradlew checkLicense
+
+            - name: Upload licence report to S3
+              run: |
+                  mkdir ./build/reports/dependency-license/${VERSION}
+                  cp ./build/reports/dependency-license/index.html ./build/reports/dependency-license/${VERSION}/licence-report.html
+                  aws s3 cp ./build/reports/dependency-license/${VERSION} s3://nl-portal-licenses/licenses/${VERSION} --recursive
+              env:
+                  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY_ID }}
+                  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                  AWS_DEFAULT_REGION: 'eu-central-1'
+
+            - name: Gradle htmlDependencyReport
+              run: ./gradlew htmlDependencyReport
+
+            - name: Upload dependencies report to S3
+              run: |
+                  aws s3 cp --recursive build/reports/project/dependencies s3://valtimo-dependency-reports/reports/${VERSION}
+                  aws s3 rm --recursive s3://valtimo-dependency-reports/reports/latest
+                  aws s3 cp --recursive s3://valtimo-dependency-reports/reports/${VERSION} s3://valtimo-dependency-reports/reports/latest
+              env:
+                  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY_ID }}
+                  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                  AWS_DEFAULT_REGION: 'eu-central-1'
