--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -44,7 +44,7 @@ jobs:
             - name: Upload licence report to S3
               run: |
                   mkdir ./build/reports/dependency-license/${VERSION}
-                  cp ./build/reports/dependency-license/index.html ./build/reports/dependency-license/${VERSION}/licence-report.html
+                  cp ./build/reports/dependency-license/index.html ./build/reports/dependency-license/${VERSION}/index.html
                   aws s3 cp ./build/reports/dependency-license/${VERSION} s3://nl-portal-licenses/licenses/${VERSION} --recursive
               env:
                   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY_ID }}
