--- a/.github/workflows/validate-build.yml
+++ b/.github/workflows/validate-build.yml
@@ -5,14 +5,17 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
-name: Build validation with Gradle
+name: Validate Build
 
 on:
     push:
         branches:
         - "**"
     pull_request:
-        branches: [ "development" ]
+        branches:
+        - "development"
+        - "version/**"
+        - "feature/**"
 
 permissions:
     contents: read
