feat: validate on push to important branches

--- a/.github/workflows/validate-build.yml
+++ b/.github/workflows/validate-build.yml
@@ -8,6 +8,11 @@
 name: Validate Build
 
 on:
+    push:
+        branches:
+          - "development"
+          - "version/**"
+          - "feature/**"
     pull_request:
         branches:
         - "development"
