--- a/zgw/berichten/licenseHeaderFile.template
+++ b/zgw/berichten/licenseHeaderFile.template
@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2023 Ritense BV, the Netherlands.
+ * Copyright (c) $YEAR Ritense BV, the Netherlands.
  *
  * Licensed under EUPL, Version 1.2 (the "License");
  * you may not use this file except in compliance with the License.
@@ -13,15 +13,3 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package nl.nlportal.graphql
-
-import com.expediagroup.graphql.generator.directives.KotlinDirectiveWiringFactory
-import nl.nlportal.graphql.hooks.CustomSchemaGeneratorHooks
-import org.springframework.boot.autoconfigure.AutoConfiguration
-import org.springframework.context.annotation.Bean
-
-@AutoConfiguration
-class GraphqlAutoConfiguration {
-    @Bean
-    fun hooks() = CustomSchemaGeneratorHooks(KotlinDirectiveWiringFactory())
-}
