--- a/app/src/main/resources/config/application.yml
+++ b/app/src/main/resources/config/application.yml
@@ -73,6 +73,10 @@ logging:
 
 nl-portal:
     zgw:
+        besluiten:
+            url: http://localhost:8001
+            clientId: valtimo_client
+            secret: e09b8bc5-5831-4618-ab28-41411304309d
         catalogiapi:
             url: http://localhost:8001
             clientId: valtimo_client
