add besluiten to Zaak

--- a/zgw/zaken-api/src/test/resources/config/application.yml
+++ b/zgw/zaken-api/src/test/resources/config/application.yml
@@ -12,6 +12,10 @@ nl-portal:
             url: http://localhost:8001
             clientId: valtimo_client
             secret: e09b8bc5-5831-4618-ab28-41411304309d
+        besluiten:
+            url: http://localhost:8001
+            clientId: valtimo_client
+            secret: e09b8bc5-5831-4618-ab28-41411304309d
         documentenapis:
             default-document-api: openzaak
             configurations:
