--- a/app/src/main/resources/config/application.yml
+++ b/app/src/main/resources/config/application.yml
@@ -72,6 +72,12 @@ logging:
         org.springframework.amqp: DEBUG
 
 nl-portal:
+    config:
+        openklant:
+            enabled: true
+            properties:
+                url: http://localhost:8007
+                token: ac045222c9e7cde8120b48735560f9b920bb58cd
     zgw:
         catalogiapi:
             url: http://localhost:8001
