--- a/product/src/test/resources/config/application.yml
+++ b/product/src/test/resources/config/application.yml
@@ -57,7 +57,7 @@ nl-portal:
         product-details-type-url: http://host.docker.internal:8011/api/v1/objecttypes/3e852115-277a-4570-873a-9a64be3aeb36
         product-verbruiks-object-type-url: http://host.docker.internal:8011/api/v1/objecttypes/3e852115-277a-4570-873a-9a64be3aeb37
     dmn:
-        url: http://localhost:8080
+        url: http://localhost:9000/engine-rest
     prefill:
         type-url: http://host.docker.internal:8011/api/v1/objecttypes/3e852115-277a-4570-873a-9a64be3aeb37
 
