PDC: temp solution to remove prefill objects, based on property. Added identificatie en formulier to PrefillConfig

--- a/product/src/test/resources/config/application.yml
+++ b/product/src/test/resources/config/application.yml
@@ -60,6 +60,7 @@ nl-portal:
         url: http://localhost:9000/engine-rest
     prefill:
         type-url: http://host.docker.internal:8011/api/v1/objecttypes/3e852115-277a-4570-873a-9a64be3aeb37
+        remove-objects: true
 
 spring:
     security:
