basepath of Ogone Payment from /api to /api/public. So there is a difference between the download secure api endpoints and the one who need be accessible from service to service

--- a/app/src/main/resources/config/application.yml
+++ b/app/src/main/resources/config/application.yml
@@ -157,7 +157,7 @@ nl-portal:
                   allowedOrigins: "*"
                   allowedMethods: "*"
         endpoints:
-            unsecured: /api/payment/**
+            unsecured: /api/public/**
     payment:
         ogone:
             url: https://secure.ogone.com/ncol/test/orderstandard.asp
