--- a/app/src/main/resources/config/application.yml
+++ b/app/src/main/resources/config/application.yml
@@ -76,7 +76,7 @@ nl-portal:
         openklant:
             enabled: true
             properties:
-                url: http://localhost:8007
+                url: http://localhost:8007/klantinteracties/api/v1
                 token: ac045222c9e7cde8120b48735560f9b920bb58cd
     zgw:
         catalogiapi:
