* change default loglevels for app to info * disable sql logging for app * fix DigitaleAdresType serialization * add authentication requirement to all openklant queries and mutations * add delete DigitaleAdres mutation

--- a/app/src/main/resources/config/application.yml
+++ b/app/src/main/resources/config/application.yml
@@ -38,7 +38,7 @@ spring:
     jpa:
         database-platform: org.hibernate.dialect.PostgreSQLDialect
         database: postgresql
-        show_sql: true
+        show_sql: false
         open-in-view: false
         properties:
             hibernate:
@@ -69,7 +69,7 @@ graphql:
 
 logging:
     level:
-        org.springframework.amqp: DEBUG
+        root: INFO
 
 nl-portal:
     config:
