* revert splitting autoconfiguration * change base integration test image

--- a/docker-resources/docker-compose-base-test.yml
+++ b/docker-resources/docker-compose-base-test.yml
@@ -1,6 +1,6 @@
 services:
     db:
-        image: "postgres"
+        image: postgres:15
         environment:
             - POSTGRES_USER=postgres
             - POSTGRES_PASSWORD=test
