when get Bericht and is not opened yet the object is set to opened

--- a/zgw/berichten/src/test/resources/config/application.yml
+++ b/zgw/berichten/src/test/resources/config/application.yml
@@ -2,6 +2,10 @@ graphql:
     packages:
         - "nl.nlportal"
 
+logging:
+    level:
+        reactor.netty.http.client.HttpClient: TRACE
+
 nl-portal:
     openklant:
         url: #filled in test
