story: 117304 implement openklant 2.0 (#302)
* wip

* wip

* wip

* wip

* improve gradle setup so that docker compose can be used for integration testing on macOS

* * make filtering easier to apply to OpenKlant requests
* fix integration tests not running on check/build
* remove unnecessary Create* dto's

* * separate contactgegevens api from klantinteracties api in OpenKlant Module

* * more gradle test fixes
* expand filtering with page

* * added partijen path test
* refactored some functions and class names

* * wip PartijMutation

* * add initial PartijMutation test

* * add assertions to Partij Mutation test

* * implement updatePartij mutation

* * run ktlint

* * refactor some tests
* introduce initial DigitaleAdres related entities and queries

* * change default loglevels for app to info
* disable sql logging for app
* fix DigitaleAdresType serialization
* add authentication requirement to all openklant queries and mutations
* add delete DigitaleAdres mutation

* * revert splitting autoconfiguration
* change base integration test image

* * add missing queries

* * changed return type of deleteUserDigitaleAdres mutation
* integration tests for DigitaleAdres
* fixed integration test ordering in test classe where it matters

--- a/app/src/main/resources/config/application.yml
+++ b/app/src/main/resources/config/application.yml
@@ -38,7 +38,7 @@ spring:
     jpa:
         database-platform: org.hibernate.dialect.PostgreSQLDialect
         database: postgresql
-        show_sql: true
+        show_sql: false
         open-in-view: false
         properties:
             hibernate:
@@ -69,9 +69,15 @@ graphql:
 
 logging:
     level:
-        org.springframework.amqp: DEBUG
+        root: INFO
 
 nl-portal:
+    config:
+        openklant:
+            enabled: true
+            properties:
+                klantinteracties-api-url: http://localhost:8007/klantinteracties/api/v1
+                token: ac045222c9e7cde8120b48735560f9b920bb58cd
     zgw:
         catalogiapi:
             url: http://localhost:8001
