--- a/docker-resources/docker-compose-base-test.yml
+++ b/docker-resources/docker-compose-base-test.yml
@@ -1,7 +1,6 @@
-version: '3.9'
 services:
     db:
-        image: "postgres"
+        image: postgres:15
         environment:
             - POSTGRES_USER=postgres
             - POSTGRES_PASSWORD=test
