--- a/zgw/openklant/src/test/resources/config/application.yml
+++ b/zgw/openklant/src/test/resources/config/application.yml
@@ -10,6 +10,10 @@ nl-portal:
               klantinteracties-api-url: http://localhost:9007/klantinteracties/api/v1
               token: ac045222c9e7cde8120b48735560f9b920bb58cd
 
+logging:
+    level:
+        reactor.netty.http.client.HttpClient: TRACE
+
 spring:
     security:
         oauth2:
